--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,12 @@
-[submodule "lib/ds-test"]
-	path = lib/ds-test
+[submodule "modules/openzeppelin-contracts"]
+	path = modules/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "modules/ds-test"]
+	path = modules/ds-test
 	url = https://github.com/dapphub/ds-test
+[submodule "modules/util"]
+	path = modules/util
+	url = https://github.com/maple-labs/util
+[submodule "modules/funds-distribution-token"]
+	path = modules/funds-distribution-token
+	url = https://github.com/maple-labs/funds-distribution-token
