--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           name: Build and test contracts
           command: |
             GIT_SSH_COMMAND="ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no" git submodule update --init --recursive
-            ./test.sh -c ./config/ci.json
+            ./test.sh -c ./config/ci.json -r 100
 workflows:
   version: 2
   test_all:
