feat: Create LoanProxyFactory contract with unit testing for instantiation (SC-3812) (#22)
* add initial implementation of maple loan factory

* feat: introduce test suite

* fix: remove unnecessary module

* fix: import path

* fix: styling

* fix: adhere pr review suggestions

* fix: PR adjustments

* feat: addesd nonces for salt

* cleanup: full interface, typos, line length, spacing, abbreviations, naming redundancy

* fix: salt does not need to include args

* chore: PR fixes

Co-authored-by: JG Carvalho <jg@jgcarv.com>
Co-authored-by: Michael De Luca <michael.deluca@circle-free.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "modules/ds-test"]
 	path = modules/ds-test
 	url = https://github.com/dapphub/ds-test
+[submodule "modules/proxy-factory"]
+	path = modules/proxy-factory
+	url = https://github.com/maple-labs/proxy-factory.git
