refactor: Merge LoanPritimive into LoanInternals and use MapleProxyFactory (#66)
* Draft

* fundLoan

* fix: update tests to pass (#67)

* refinancer test (#68)

* feat: Fix Payments.t.sol (#69)

* feat: fix Payments.t.sol

* feat: add refinancer

* Draft

* Draft

* Increase Principal

* Finished Tests

Co-authored-by: Lucas Manuel <lucas@maple.finance>
Co-authored-by: Joao Gabriel Carvalho <jg@jgcarv.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,9 +4,9 @@
 [submodule "modules/erc20-helper"]
 	path = modules/erc20-helper
 	url = https://github.com/maple-labs/erc20-helper.git
-[submodule "modules/proxy-factory"]
-	path = modules/proxy-factory
-	url = https://github.com/maple-labs/proxy-factory.git
 [submodule "modules/contract-test-utils"]
 	path = modules/contract-test-utils
 	url = https://github.com/maple-labs/contract-test-utils.git
+[submodule "modules/maple-proxy-factory"]
+	path = modules/maple-proxy-factory
+	url = https://github.com/maple-labs/maple-proxy-factory.git
