feat: Recurring establishment fees (SC-4779) (#142)
* Draft 1

* Draft

* Draft _makePayment_ done

* fix: fix tests

* fix: CI updates

* fix: More CI/test fixes

* fix: add timestamp back to foundry.toml

* fix: rm results.txt

* ci: update CI config

* feat: update erc20, imports

* chore: update ctu submodule to older commit

* chore: update to latest ctu submodule

* fix: comment out slither ci

* chore: PR fixes

* fix: update tests to pass fuzzing

* fix: update generic fuzzing test to use smaller values

Co-authored-by: Lucas Manuel <lucas@maple.finance>

--- a/.github/workflows/push-to-main.yml
+++ b/.github/workflows/push-to-main.yml
@@ -1,4 +1,4 @@
-name: SC Tests
+name: 50k fuzz run test on push to main
 
 on:
   push:
@@ -9,20 +9,17 @@ jobs:
   run-ci:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Install Foundry
-      uses: onbjerg/foundry-toolchain@v1
-      with:
-        version: nightly
+      - name: Install Foundry
+        uses: onbjerg/foundry-toolchain@v1
+        with:
+          version: nightly
 
-    - name: Checkout submodules
-      shell: bash
-      run: |
-        git config --global url."https://github.com/".insteadOf "git@github.com:"
-        forge update
+      - name: Pull library deps
+        run: |
+          git config --global url."https://github.com/".insteadOf "git@github.com:"
+          forge update
 
-    - name: Run forge tests
-      env:
-        ETH_RPC_URL: ${{ secrets.ETH_RPC_URL }}
-      run: ./test.sh -r 50000
+      - name: Run forge tests
+        run: ./test.sh -p super_deep
