--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -6,21 +6,17 @@ jobs:
   run-ci:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Install Foundry
-      uses: onbjerg/foundry-toolchain@v1
-      with:
-        version: nightly
+      - name: Install Foundry
+        uses: onbjerg/foundry-toolchain@v1
+        with:
+          version: nightly
 
-    - name: Checkout submodules
-      shell: bash
-      run: |
-        git config --global url."https://github.com/".insteadOf "git@github.com:"
-        forge update
+      - name: Pull library deps
+        run: |
+          git config --global url."https://github.com/".insteadOf "git@github.com:"
+          forge update
 
-    - name: Run forge tests
-      env:
-        ETH_RPC_URL: ${{ secrets.ETH_RPC_URL }}
-      run: ./test.sh -r 1000
-
+      - name: Run forge tests
+        run: ./test.sh -p deep
