--- a/.github/workflows/push-to-main.yml
+++ b/.github/workflows/push-to-main.yml
@@ -16,10 +16,10 @@ jobs:
         with:
           version: nightly
 
-      - name: Pull library deps
+      - name: Install submodules
         run: |
           git config --global url."https://github.com/".insteadOf "git@github.com:"
-          forge update
+          git submodule update --init --recursive
 
       - name: Run forge tests
         run: ./test.sh -p super_deep
