feat: Enable doc generation (#170)

--- a/dapp-config.json
+++ b/dapp-config.json
@@ -16,8 +16,7 @@
     },
     "settings": {
         "optimizer": {
-            "enabled": true,
-            "runs": 200
+            "enabled": false
         },
         "outputSelection": {
             "*": {
@@ -25,13 +24,7 @@
                     "abi",
                     "devdoc",
                     "userdoc",
-                    "metadata",
-                    "evm.bytecode",
-                    "evm.deployedBytecode",
-                    "evm.gasEstimates"
-                ],
-                "": [
-                    "ast"
+                    "metadata"
                 ]
             }
         },
