--- a/foundry.toml
+++ b/foundry.toml
@@ -6,7 +6,8 @@ offline = true                # Disable downloading of missing solc version(s)
 optimizer = true              # Enable or disable the solc optimizer
 optimizer_runs = 200          # The number of optimizer runs
 verbosity = 2                 # The verbosity of tests
-block_timestamp = 1622400000  # Timestamp for tests (non-zero)\
+bytecode_hash = "none"        # For deterministic code
+block_timestamp = 1622400000  # Timestamp for tests (non-zero)
 
 [local]
 fuzz_runs = 100
