--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -19,4 +19,4 @@ jobs:
           git submodule update --init --recursive
 
       - name: Run forge tests
-        run: ./test.sh -p deep
+        run: ./scripts/test.sh -p deep
