--- a/.github/workflows/push-to-main.yml
+++ b/.github/workflows/push-to-main.yml
@@ -22,4 +22,4 @@ jobs:
           git submodule update --init --recursive
 
       - name: Run forge tests
-        run: ./test.sh -p super_deep
+        run: ./sciprts/test.sh -p super_deep
