--- a/foundry.toml
+++ b/foundry.toml
@@ -1,18 +1,18 @@
-[default]
+[profile.default]
 contracts = 'contracts'       # The source directory
 libs = ['modules']            # A list of library directories
 solc_version = '0.8.7'        # Override for the solc version (setting this ignores `auto_detect_solc`)
-optimizer = true              # Enable or disable the solc optimizer
+optimizer = false             # Enable or disable the solc optimizer
 optimizer_runs = 200          # The number of optimizer runs
 verbosity = 3                 # The verbosity of tests
 bytecode_hash = "none"        # For deterministic code
 block_timestamp = 1622400000  # Timestamp for tests (non-zero)
 
-[local]
+[profile.local]
 fuzz_runs = 100
 
-[deep]
+[profile.deep]
 fuzz_runs = 5000
 
-[super_deep]
+[profile.super_deep]
 fuzz_runs = 50000
