feat: Clean up tests and other fixes (SC-8409) (#205)
* feat: clean up tests and other fixes

* fix: add back success cases

* fix: add back originalCall

Co-authored-by: lucas-manuel <lucas@maple.finance>

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
-/out
-hevm*
-.vscode/*
-/package
+# Foundry
+cache/
+out/
+.vscode/
+
+# MacOS
 .DS_Store
+
+hevm*
+/package
 artifacts/
 docs/
 metadata.json
-cache/
