--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,7 @@
 [submodule "modules/contract-test-utils"]
 	path = modules/contract-test-utils
 	url = https://github.com/maple-labs/contract-test-utils.git
+	ignore = dirty
 [submodule "modules/maple-proxy-factory"]
 	path = modules/maple-proxy-factory
 	url = https://github.com/maple-labs/maple-proxy-factory.git
