--- a/foundry.toml
+++ b/foundry.toml
@@ -1,11 +1,12 @@
 [profile.default]
 contracts = 'contracts'       # The source directory
+test = 'tests'
 libs = ['modules']            # A list of library directories
 solc_version = '0.8.7'        # Override for the solc version (setting this ignores `auto_detect_solc`)
 optimizer = false             # Enable or disable the solc optimizer
 optimizer_runs = 200          # The number of optimizer runs
 verbosity = 3                 # The verbosity of tests
-bytecode_hash = "none"        # For deterministic code
+fuzz_runs = 100               # Number of fuzz runs
 block_timestamp = 1622400000  # Timestamp for tests (non-zero)
 
 [profile.deep]
