--- a/.github/workflows/forge-pr.yaml
+++ b/.github/workflows/forge-pr.yaml
@@ -1,9 +1,6 @@
-name: 50k fuzz run test on push to main
+name: Forge Tests (PR)
 
-on:
-  push:
-    branches:
-      - main
+on: [pull_request]
 
 jobs:
   run-ci:
@@ -22,4 +19,4 @@ jobs:
           git submodule update --init --recursive
 
       - name: Run forge tests
-        run: ./scripts/test.sh -p super_deep
+        run: ./scripts/test.sh -p deep
